src/test/deca/context/invalid/return_sans_valeur_nonvoid.deca
// Description :
// Une méthode a return int doit retourner un int pas void.

// Resultats :
// Echec

class Gardien {
    int arreter() {
        return;
    }
}

{ }